# plygui

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: adapter.rs  auto.rs  callbacks.rs  controls.rs  defaults.rs  development.rs  ids.rs  layout.rs  lib.rs  macros.rs  markup.rs  members.rs  runtime.rs  sdk.rs  types.rs  utils.rs
api/src/common/adapter/: mod.rs
api/src/inner/: adapted.rs  adapter.rs  application.rs  auto.rs  button.rs  clickable.rs  closeable.rs  container.rs  container_multi.rs  container_single.rs  control.rs  drawable.rs  frame.rs  has_image.rs  has_label.rs  has_layout.rs  has_native_id.rs  has_orientation.rs  has_progress.rs  has_size.rs  has_visibility.rs  image.rs  item_clickable.rs  layout_linear.rs  list.rs  member.rs  message.rs  mod.rs  native_id.rs  progress_bar.rs  splitted.rs  table.rs  text.rs  tray.rs  tree.rs  window.rs
api/src/types/: mod.rs
api/src/types/imp/: matrix.rs  mod.rs  string_table.rs  string_tuple_vec.rs  string_vec.rs
lib/: Cargo.toml
lib/src/: common.rs  lib.rs
macros/: Cargo.toml
macros/src/: able_to.rs  as_into.rs  custom_code_block.rs  define.rs  has.rs  lib.rs  maybe.rs  on.rs
src/: auto.rs  callbacks.rs  controls.rs  defaults.rs  development.rs  ids.rs  layout.rs  lib.rs  macros.rs  markup.rs  members.rs  runtime.rs  traits.rs  types.rs  utils.rs
src/development/: layout.rs  mod.rs
src/tests/: member.rs  mod.rs
testable/: Cargo.toml
testable/src/: application.rs  better_button.rs  button.rs  common.rs  frame.rs  image.rs  layout_linear.rs  lib.rs  list.rs  message.rs  progress_bar.rs  splitted.rs  text.rs  tray.rs  window.rs
