[package]
name = "plygui-api"
version = "0.0.1"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]

[lib]
name = "plygui_api"
path = "src/lib.rs"

[dependencies]
derive_builder = "~0.5"
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }

[features]
markup = ["serde", "serde_derive"]