[package]
name = "plygui-api"
version = "0.0.1"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]

[lib]
name = "plygui_api"
path = "src/lib.rs"

[dependencies]
serde = { version = "^1.0", optional = true }
serde_json = { version = "^1.0", optional = true }
typemap = { version = "^0.3", optional = true }

[features]
markup = ["serde", "serde_json", "typemap"]