[package]
name = "plygui"
version = "0.0.1"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
edition = "2018"

[lib]
name = "plygui"
path = "src/lib.rs"

[dependencies]
plygui-api = { version = "0.0.1", path = "../api" }

plygui-testable = { version = "0.0.1", path = "../testable" }

[features]

#https://github.com/rust-lang/cargo/issues/1197
#native = ["win32", "cocoa", "gtk3"]
type_check = ["plygui-api/type_check"]
default = ["type_check"]
